<resources>
    <!-- app name -->
    <string name="app_name" translatable="false">snse</string>
    <!-- Sentiments -->
    <string name="feelingSad" translatable="false">😞</string>
    <string name="feelingMeh" translatable="false">😐</string>
    <string name="feelingHappy" translatable="false">😊</string>
    <!-- Entry UI Labels -->
    <string name="intensity" translatable="false">
        0 - 100
    </string>
    <string name="feeling">
        How are you feeling?
    </string>
    <string name="color">
        Color?
    </string>
    <string name="water">
        Have you recently drunk water?
    </string>
    <string name="elaborate">
        Care to elaborate?
    </string>
    <string name="thanks">Thank you for sharing.</string>
    <!-- Menu items -->
    <string name="action_history">History</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="title_sentiment_list" translatable="false">Sentiments</string>
    <string name="title_sentiment_detail" translatable="false">Sentiment Detail</string>

    <string name="cancel">Cancel</string>
    <!-- Strings related to History -->
    <string name="authenticate">Authenticate</string>
    <string name="auth_subtitle" translatable="false"></string>
    <string name="auth_description" translatable="false"></string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_daily_notifications">Reminder notification</string>
    <string name="pref_title_two_week_reminder_notification">Two week reminder</string>

    <string name="pref_title_notification_frequency">Notification frequency</string>
    <string-array name="pref_notification_frequency_titles">
        <item>Twice a day</item>
        <item>Once a day</item>
        <item>Once a week</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_notification_frequency_values">
        <item>720000</item>
        <item>1440000</item>
        <item>10080000</item>
        <item>-1</item>
    </string-array>

</resources>
