<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_scrolling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:paddingBottom="@dimen/text_margin">
        <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/feeling"/>
            <RadioGroup
                    android:id="@+id/feelingRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                <RadioButton
                        android:text="😞"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:id="@+id/radioSad"
                        android:layout_weight="2"
                        android:textSize="24pt"
                        android:layout_gravity="start"/>
                <RadioButton
                        android:text="😐"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:id="@+id/radioMeh"
                        android:textSize="24pt"
                        android:layout_weight="2"/>
                <RadioButton
                        android:text="😊"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:id="@+id/radioHappy"
                        android:textSize="24pt"
                        android:layout_weight="2"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/intensity"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/intensityBar"
                    android:max="100"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/colorLinearLayout"
                android:layout_marginBottom="@dimen/text_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/color"/>
            <ImageButton
                    android:id="@+id/colorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_plus_circle_outline"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/water"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/waterCheckBox"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_gravity="center"
                    android:text=""/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/elaborate"/>
            <EditText
                    android:focusedByDefault="false"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:inputType="textMultiLine"
                    android:id="@+id/elaborateText"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
